--- a/plugin.xml
+++ b/plugin.xml
@@ -32,9 +32,15 @@
             </feature>
         </config-file>
         <source-file src="src/ios/CDVEcho.m" />
+        <header-file src="src/ios/HapticMetronome.h" />
+        <source-file src="src/ios/HapticMetronome.mm" />
         <header-file src="src/ios/Metronome.h" />
         <source-file src="src/ios/Metronome.m" />
         <resource-file src="src/ios/MoreCowbell.caf" />
+        <header-file src="src/ios/SoundMetronome.h" />
+        <source-file src="src/ios/SoundMetronome.mm" />
+
+
     </platform>
 
     <platform name="browser">
