--- a/plugin.xml
+++ b/plugin.xml
@@ -33,12 +33,12 @@
         </config-file>
         <source-file src="src/ios/CDVEcho.m" />
         <header-file src="src/ios/HapticMetronome.h" />
-        <source-file src="src/ios/HapticMetronome.mm" />
+        <source-file src="src/ios/HapticMetronome.m" />
         <header-file src="src/ios/Metronome.h" />
         <source-file src="src/ios/Metronome.m" />
         <resource-file src="src/ios/MoreCowbell.caf" />
         <header-file src="src/ios/SoundMetronome.h" />
-        <source-file src="src/ios/SoundMetronome.mm" />
+        <source-file src="src/ios/SoundMetronome.m" />
 
 
     </platform>
