--- a/plugin.xml
+++ b/plugin.xml
@@ -2,28 +2,33 @@
 
 <plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
            id="cordova-plugin-metronomeplugin"
-      version="0.0.1">
+      version="0.0.2">
     <name>MetronomePlugin</name>
 
     <js-module src="www/template.js" name="MetronomePlugin">
         <clobbers target="cordova.plugins.MetronomePlugin.setBeat" />
     </js-module>
-    
+
     <!-- TODO: Uncomment this if you would like to add Android support -->
     <!-- android -->
-    <!--    
     <platform name="android">
-        <config-file target="res/xml/config.xml" parent="/*">
+        <config-file target="config.xml" parent="/*">
             <feature name="Echo" >
-                <param name="android-package" value="org.apache.cordova.test.Echo"/>
+                <param name="android-package" value="cordova.plugins.MetronomePlugin"/>
             </feature>
         </config-file>
 
-        <source-file src="src/android/Echo.java" target-dir="src/org/apache/cordova/test" />
-    </platform>
-    -->
+        <source-file src="src/android/Echo.java" />
+        <source-file src="src/android/Constants.java" />
+        <source-file src="src/android/Metronome.java" />
+        <source-file src="src/android/SoundMetronome.java" />
+        <source-file src="src/android/MetronomeNote.java" />
 
-    <!-- TODO: Uncomment this if you would like to add iOS support -->
+        <resource-file src="src/android/res/raw/hq_woodblock_high.raw" />
+        <resource-file src="src/android/res/raw/hq_woodblock_mid.raw" />
+        <resource-file src="src/android/res/raw/hq_woodblock_low.raw" />
+    </platform>
+
     <!-- ios -->
     <platform name="ios">
         <config-file target="config.xml" parent="/*">
@@ -41,12 +46,10 @@
         <resource-file src="src/ios/HQWoodblockMid.caf" />
         <header-file src="src/ios/SoundMetronome.h" />
         <source-file src="src/ios/SoundMetronome.mm" />
-
-
     </platform>
 
     <platform name="browser">
-        <js-module src="www/template.js" name="MetronomePlugin">
+        <js-module src="www/metronome.js" name="MetronomePlugin">
             <runs />
         </js-module>
     </platform>
