--- a/plugin.xml
+++ b/plugin.xml
@@ -5,31 +5,29 @@
       version="0.0.2">
     <name>MetronomePlugin</name>
 
-    <js-module src="www/template.js" name="MetronomePlugin">
-        <clobbers target="cordova.plugins.MetronomePlugin.setBeat" />
+    <js-module src="www/metronome.js" name="MetronomePlugin">
+        <clobbers target="cordova.plugins.MetronomePlugin" />
     </js-module>
 
-    <!-- TODO: Uncomment this if you would like to add Android support -->
-    <!-- android -->
     <platform name="android">
         <config-file target="config.xml" parent="/*">
             <feature name="Echo" >
-                <param name="android-package" value="cordova.plugins.MetronomePlugin"/>
+                <param name="android-package" value="org.cordova.plugins.metronome.Echo"/>
+                <param name="onload" value="true" />
             </feature>
         </config-file>
 
-        <source-file src="src/android/Echo.java" />
-        <source-file src="src/android/Constants.java" />
-        <source-file src="src/android/Metronome.java" />
-        <source-file src="src/android/SoundMetronome.java" />
-        <source-file src="src/android/MetronomeNote.java" />
+        <source-file src="src/android/Echo.java" target-dir="src/org/cordova/plugins/metronome"/>
+        <source-file src="src/android/Constants.java" target-dir="src/org/cordova/plugins/metronome"/>
+        <source-file src="src/android/Metronome.java" target-dir="src/org/cordova/plugins/metronome"/>
+        <source-file src="src/android/SoundMetronome.java" target-dir="src/org/cordova/plugins/metronome"/>
+        <source-file src="src/android/MetronomeNote.java" target-dir="src/org/cordova/plugins/metronome"/>
 
-        <resource-file src="src/android/res/raw/hq_woodblock_high.raw" />
-        <resource-file src="src/android/res/raw/hq_woodblock_mid.raw" />
-        <resource-file src="src/android/res/raw/hq_woodblock_low.raw" />
+        <resource-file src="src/android/res/raw/hq_woodblock_high.raw" target="res/raw/hq_woodblock_high.raw" />
+        <resource-file src="src/android/res/raw/hq_woodblock_mid.raw" target="res/raw/hq_woodblock_mid.raw" />
+        <resource-file src="src/android/res/raw/hq_woodblock_low.raw" target="res/raw/hq_woodblock_low.raw" />
     </platform>
 
-    <!-- ios -->
     <platform name="ios">
         <config-file target="config.xml" parent="/*">
             <feature name="Echo">
@@ -46,12 +44,6 @@
         <resource-file src="src/ios/HQWoodblockMid.caf" />
         <header-file src="src/ios/SoundMetronome.h" />
         <source-file src="src/ios/SoundMetronome.mm" />
-    </platform>
-
-    <platform name="browser">
-        <js-module src="www/metronome.js" name="MetronomePlugin">
-            <runs />
-        </js-module>
     </platform>
 
 </plugin>
